# chadselect

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: publish-cargo.yml  publish-pypi.yml  publish.yml
benches/: engine_bench.rs
chadselect-py/: Cargo.toml  README.md  pyproject.toml
chadselect-py/python/chadselect/: __init__.py  __init__.pyi  _async.py
chadselect-py/src/: lib.rs
chadselect-py/src/chadselect/: __init__.py  _chadselect.py  _functions.py  _query.py  py.typed
chadselect-py/src/chadselect/engine/: __init__.py  css.py  json.py  regex.py  xpath.py
chadselect-py/tests/: bench.py  test_async.py  test_chadselect.py  test_sync.py
chadselect-rs/: Cargo.toml  LICENSE-MIT  MEMORY.md  README.md  benchmarkresults.md
chadselect-rs/benches/: engine_bench.rs  xpath_compare.rs
chadselect-rs/eval/: README.md  corpus_vocab.json  extract_selectors.py  results.csv  selectors.json
chadselect-rs/examples/: engine_compile_probe.rs  parser_depth_probe.rs  selector_eval.rs  xpath_floor_probe.rs
chadselect-rs/src/: content.rs  functions.rs  lib.rs  query.rs
chadselect-rs/src/engine/: css.rs  json.rs  mod.rs  regex.rs  xnode.rs  xpath.rs  xpath_eval.rs  xpath_rewrite.rs
chadselect-rs/tests/: alloc_attribution.rs  bug_a_positional.rs  bug_b_deep_xpath.rs  functions_tests.rs  integration_tests.rs  jmespath_alloc.rs  join_pipe.rs  memory_harness.rs  new_pipes.rs  regex_tests.rs  xpath_conformance_probe.rs  xpath_css_regression.rs  xpath_numeric_and_boolean.rs  xpath_perf_guard.rs  xpath_robustness.rs
src/: lib.rs
src/engine/: css.rs  json.rs  mod.rs  regex.rs  xpath.rs
tests/: css_tests.rs  integration_tests.rs  json_tests.rs  regex_tests.rs  xpath_tests.rs
