[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chadselect"
version = "0.1.0"
description = "Unified data extraction — Regex, XPath 1.0, CSS Selectors, and JMESPath behind one query interface. Powered by Rust."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["scraping", "xpath", "css", "jmespath", "extraction", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/markjacksoncerberus/chadselect"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "chadselect._native"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
