[package]
name = "chadselect"
version = "0.3.2"
edition = "2021"
description = "Unified data extraction — Regex, XPath 1.0, CSS Selectors, and JMESPath behind one query interface"
license = "MIT"
readme = "README.md"
repository = "https://github.com/markjacksoncerberus/chadselect"
keywords = ["scraping", "xpath", "css", "jmespath", "extraction"]
categories = ["parsing", "web-programming"]

[dependencies]
regex = "1"
serde_json = "1"
scraper = "0.21"
jmespath = "0.3"
log = "0.4"
# Forked xrust with the XPath positional-predicate fixes. For distribution,
# switch this to the git fork (or a renamed crates.io publish), e.g.:
#   xrust = { git = "https://github.com/markjacksoncerberus/xrust", branch = "fix/xpath-positional-predicates", default-features = false }
xrust = { path = "../../xrust", default-features = false }
ego-tree = "0.9"
qualname = "0.0.1"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
